[build-system]
requires = [
    "setuptools==69.0.0",
    "setuptools_scm==8.0.4",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "toga-chart"
description = "A Toga matplotlib backend."
readme = "README.rst"
requires-python = ">= 3.8"
license.text = "New BSD"
authors = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]
keywords = [
    "matplotlib",
    "toga",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: User Interfaces",
]

[project.optional-dependencies]
# Extras used by developers *of* briefcase are pinned to specific versions to
# ensure environment consistency.
dev = [
    # Pre-commit 3.6.0 deprecated support for Python 3.8
    "pre-commit == 3.5.0 ; python_version < '3.9'",
    "pre-commit == 3.7.0 ; python_version >= '3.9'",
    "pytest == 8.1.1",
    "setuptools_scm == 8.0.4",
    "tox == 4.14.1",
    "toga-dummy >= 0.4.0",
]
docs = [
    "furo == 2024.1.29",
    "pyenchant == 3.2.2",
    # Sphinx 7.2 deprecated support for Python 3.8
    "sphinx == 7.1.2 ; python_version < '3.9'",
    "sphinx == 7.2.6 ; python_version >= '3.9'",
    "sphinx_tabs == 3.4.5",
    "sphinx-autobuild == 2024.2.4",
    "sphinx-copybutton == 0.5.2",
    "sphinxcontrib-spelling == 8.0.0",
]

[project.urls]
Homepage = "https://github.com/beeware/toga-chart"
Funding = "https://beeware.org/contributing/membership/"
Documentation = "https://toga-chart.readthedocs.io/en/latest/"
Tracker = "https://github.com/beeware/toga-chart/issues"
Source = "https://github.com/beeware/toga-chart"

[tool.isort]
profile = "black"
split_on_trailing_comma = true
combine_as_imports = true

[tool.setuptools_scm]
# To enable SCM versioning, we need an empty tool configuration for setuptools_scm

[tool.towncrier]
directory = "changes"
package = "toga_chart"
package_dir = "src"
filename = "docs/background/releases.rst"
title_format = "{version} ({project_date})"
template = "changes/template.rst"
type = [
    { directory = "feature", name = "Features", showcontent = true },
    { directory = "bugfix", name = "Bugfixes", showcontent = true },
    { directory = "removal", name = "Backward Incompatible Changes", showcontent = true },
    { directory = "doc", name = "Documentation", showcontent = true },
    { directory = "misc", name = "Misc", showcontent = false },
]
