[metadata]
name = toga-chart
version = attr: toga_chart.__version__
project_urls =
    Funding = https://beeware.org/contributing/membership/
    Tracker = https://github.com/beeware/toga-chart/issues
    Source = http://github.com/beeware/toga-chart
author = Russell Keith-Magee
author_email = russell@keith-magee.com
maintainer = Russell Keith-Magee
maintainer_email = russell@keith-magee.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
license = New BSD
license_file = LICENSE
description = "A Toga matplotlib backend."
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords=
    matplotlib
    toga
platforms = any

[options]
zip_safe = False
packages = find:
python_requires = >= 3.5
include_package_data = True
package_dir=
    = src
install_requires =
    toga >= 0.3.0.dev20
    matplotlib >= 3.0.3

[options.packages.find]
where = src


[flake8]
# https://flake8.readthedocs.org/en/latest/
exclude=\
    docs/*,\
    build/*,\
    local/*,\
    .eggs/*,\
    .tox/*,\
    venv/*
max-complexity = 15
max-line-length = 119

[isort]
skip =
    docs/conf.py
    venv
    local
multi_line_output=3
