[metadata]
name = toga-chart
project_urls =
    Funding = https://beeware.org/contributing/membership/
    Tracker = https://github.com/beeware/toga-chart/issues
    Source = http://github.com/beeware/toga-chart
author = Russell Keith-Magee
author_email = russell@keith-magee.com
maintainer = Russell Keith-Magee
maintainer_email = russell@keith-magee.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
license = New BSD
license_files =
    LICENSE
description = "A Toga matplotlib backend."
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords=
    matplotlib
    toga
platforms = any

[options]
zip_safe = False
packages = find:
python_requires = >= 3.8
include_package_data = True
package_dir=
    = src
install_requires =
    toga >= 0.3.1
    matplotlib >= 3.0.3

[options.packages.find]
where = src

[options.extras_require]
dev =
    pre-commit == 3.4.0
    pytest == 7.4.2
    setuptools_scm[toml] == 7.1.0
    tox == 4.11.3
docs =
    furo == 2023.9.10
    pyenchant == 3.2.2
    # Sphinx 7.2 deprecated support for Python 3.8
    sphinx == 7.1.2 ; python_version < '3.9'
    sphinx == 7.2.5 ; python_version >= '3.9'
    sphinx_tabs == 3.4.1
    sphinx-autobuild == 2021.3.14
    sphinx-copybutton == 0.5.2
    sphinxcontrib-spelling == 8.0.0

[flake8]
# https://flake8.readthedocs.org/en/latest/
exclude=\
    local/*,\
    .tox/*,\
    venv*/*
max-line-length = 119
extend-ignore =
    # whitespace before :
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

[isort]
skip =
    docs/conf.py
    venv
    local
multi_line_output=3
