[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Toga Chart Demo"
bundle = "org.beeware"
version = "0.1"
url = "https://beeware.org"
license = "BSD license"
author = 'Tiberius Yak'
author_email = "tiberius@beeware.org"

[tool.briefcase.app.chart]
formal_name = "Chart Demo"
description = "A testing app for Toga Chart"
sources = ['chart']
requires = []

[tool.briefcase.app.chart.macOS]
requires = [
    'toga-cocoa',
    '..',
]

[tool.briefcase.app.chart.linux]
requires = [
    'toga-gtk',
    '..',
]

[tool.briefcase.app.chart.windows]
requires = [
    'toga-winforms',
    '..',
]

# Mobile deployments
[tool.briefcase.app.chart.iOS]
requires = [
    'toga-iOS',
    '..',
]

[tool.briefcase.app.chart.android]
requires = [
    'toga-android',
    '..',
]
